# camerakit-android

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  build.gradle  circle.yml  deploy-snapshot.sh  deploy.sh  gradle.properties  gradlew  gradlew.bat  settings.gradle
camerakit/src/main/: AndroidManifest.xml  CMakeLists.txt
camerakit/src/main/api16/com/flurgle/camerakit/: Camera1.java  ConstantMapper.java  MirrorYTask.java  ProcessStillTask.java
camerakit/src/main/api16/com/wonderkiln/camerakit/: Camera1.java  ConstantMapper.java
camerakit/src/main/api21/com/flurgle/camerakit/: Camera2.java
camerakit/src/main/api21/com/wonderkiln/camerakit/: Camera2.java
camerakit/src/main/base/com/flurgle/camerakit/: CameraImpl.java  CameraProperties.java  Config.java  ErrorListener.java  PreviewImpl.java  TextureViewPreview.java
camerakit/src/main/base/com/wonderkiln/camerakit/: CameraImpl.java  CameraProperties.java  CameraViewLayout.java  ErrorListener.java  PreviewImpl.java  SurfaceViewContainer.java  SurfaceViewPreview.java  TextureViewPreview.java
camerakit/src/main/cpp/: CMakeLists.txt  JniBitmapOperations.cpp  JniBitmapOperator.cpp  JniJpegTransformer.cpp  JniYuvOperator.cpp  jni_camera_surface_texture.cpp  jni_camera_surface_view.cpp  jpgd.h  jpge.cpp  main.cpp
camerakit/src/main/cpp/camerakit/: CameraSurfaceTexture.cpp  CameraSurfaceTexture.hpp  CameraSurfaceView.cpp  CameraSurfaceView.hpp
camerakit/src/main/cpp/libjpeg/include/: config.h  jconfig.h  jpeglib.h
camerakit/src/main/events/com/wonderkiln/camerakit/: CKError.java  (+14 more)
camerakit/src/main/java/camerakit/android/: CameraKitView.kt  CameraPreview.kt
camerakit/src/main/java/com/camerakit/: CameraKit.java  CameraKitView.java  CameraPreview.kt  GestureLayout.java
camerakit/src/main/res/layout/: surface_view.xml  surface_view_preview.xml  texture_view.xml
camerakit/src/main/res/raw/: camera_fsh.glsl  camera_vsh.glsl  fragment_shader_2d.glsl  fragment_shader_ext.glsl  fragment_shader_ext_edges.glsl  fragment_shader_ext_twirl.glsl  fragment_shader_ext_warp.glsl  vertex_shader.glsl
camerakit/src/main/res/values/: attrs.xml  strings.xml
(+379 files in other folders)
